# AI_PAIRPROGRAMMING_ECOMMERCE_SAMPLE_BE

./: .gitignore  Dockerfile  entrypoint.sh  fly.toml  pyproject.toml  test.db  test.sh
.github/workflows/: code_review.yml
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: products.py
app/core/: config.py
app/crud/: crud_product.py
app/schemas/: product.py
tests/: test_main.py  test_products.py
